--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "currency-converter",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://cranky-euler-649bdb.netlify.app/",
+  "proxy": "http://localhost:8000/",
   "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
