--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "currency-converter",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000/",
   "homepage": "https://currency-converter-convert-30.herokuapp.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
