--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server:dev": "nodemon server/server.js",
-    "comp:sass": "node-sass src/styles/scss/main.scss src/styles/css/styles.css -w"
+    "comp:sass": "node-sass src/styles/scss/main.scss src/styles/css/dev-styles.css -w"
   },
   "eslintConfig": {
     "extends": [
